# inpainting-detection-old

./: .gitmodules  CMakeLists.txt  readme.md
files/: lena_color_512_d.tif
src/: image_updater.h  main.cpp  masked_patch_image.h  patch_distances.h  patch_match.cpp  patch_match.h  patch_matcher.h  shuffle.h  utils.h
